# athenaeum-stl

./: README.md
service/: .gitignore  Cargo.toml  README.md
service/migrations/2023-11-24-060824_init/: down.sql  up.sql
service/migrations/2023-12-05-170429_add_file_name/: down.sql  up.sql
service/migrations/2023-12-05-195746_add_file_size/: down.sql  up.sql
service/migrations/2023-12-18-190655_metadata/: up.sql
service/migrations/2023-12-18-212220_nsfw_tag/: up.sql
service/migrations/2023-12-20-063259_soft_delete/: up.sql
service/src/: db.rs  lib.rs  logger.rs  main.rs  models.rs  rest.rs  scanner.rs  schema.rs  util.rs
service/src/db/: labels.rs  model_files.rs  models.rs  schema.rs  types.rs
service/src/rest/: files.rs  labels.rs  models.rs
service/src/scanner/: import.rs
ui/: .betterer.results  .betterer.ts  .env  .eslintrc.cjs  .gitignore  .npmrc  jest.config.ts  next.config.js  package.json  pnpm-lock.yaml  remix.config.js  tsconfig.json
ui/app/: entry.server.tsx  root.tsx
ui/app/routes/: _index.tsx
ui/src/app/: layout.tsx  page.tsx
ui/src/app/labels/: layout.tsx  page.tsx
ui/src/app/models/: page.tsx
ui/src/app/trash/: layout.tsx  page.tsx
ui/src/components/: navigation.tsx
ui/src/components/forms/: number-input.tsx
ui/src/contexts/: app-sidebar-context.tsx  label-list-context.tsx  model-list-context.tsx  model-preview-context.tsx
ui/src/hooks/: use-model-list-settings.ts  use-sidebar.ts
ui/src/machines/: move-file-machine.ts
ui/src/services/: athenaeum.ts
ui/src/util/: dates.test.ts  dates.ts
ui/types/: mui.d.ts
(+79 files in other folders)
