[package]
name = "athenaeum_import"
version = "0.1.0"
edition = "2021"
default-run = "athenaeum_import"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = [] }
diesel = { version = "2.1.4", features = ["chrono", "returning_clauses_for_sqlite_3_35", "sqlite", "time"] }
diesel_migrations = { version = "2.1.0", features = [] }
dotenvy = { version = "0.15.7", features = [] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["compound_policy", "console_appender", "file_appender", "rolling_file_appender", "size_trigger"] }
notify = { version = "6.1.1", features = [] }
notify-debouncer-mini = "0.4.1"
rocket = { version =  "0.5.0", features = ["json"] }
uuid = { version = "1.6.1", features = ["rng", "std", "v4", "v6", "v7"] }
